fix: text-align center to text in the footer

--- a/components/Layout/Styles.module.scss
+++ b/components/Layout/Styles.module.scss
@@ -24,6 +24,10 @@
   height: 30px;
   display: flex;
   align-items: center;
+  strong {
+    text-align: center;
+    display: block;
+  }
 }
 
 //Dark theme styles
